--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="app">
+        <div id="input_container">
+            <input type="number" id="Amount" placeholder="Enter the Amount">
+            <label for="category_chart">Category:</label>
+            <select id="category_chart">
+                <option value="">--Select Category--</option>
+                <option value="Food">Food</option>
+                <option value="Travel">Travel</option>
+                <option value="Shopping">Shopping</option>
+                <option value="Other">Other</option>
+            </select>
+        </div>
+    </div>
 </body>
 </html>
