adding new div in html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
                 <option value="Shopping">Shopping</option>
                 <option value="Other">Other</option>
             </select>
+            <button id="add_btn">Add!</button>
         </div>
+        <div id="expense_display"></div>
+        <div id="total_avg"></div>
+        <div id="uncategorized"></div>
     </div>
 </body>
 </html>
