--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="app">
         <div id="input_container">
+            <label for="number">Amount</label>
             <input type="number" id="Amount" placeholder="Enter the Amount">
             <label for="category_chart">Category:</label>
             <select id="category_chart">
