--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <option value="Shopping">Shopping</option>
                 <option value="Other">Other</option>
             </select>
-            <button id="add_btn">Add!</button>
+            <button id="add_btn">Add Expense!</button>
         </div>
         <div id="expense_display"></div>
-        <div id="total_avg"></div>
+        <div id="total_and_avg"></div>
         <div id="uncategorized"></div>
     </div>
 </body>
