--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="app">
         <div id="input_container">
-            <label for="number">Amount</label>
-            <input type="number" id="Amount" placeholder="Enter the Amount">
+            <label for="amount">Amount</label>
+            <input type="number" id="amount" placeholder="Enter the Amount">
             <label for="category_chart">Category:</label>
             <select id="category_chart">
                 <option value="">--Select Category--</option>
@@ -21,7 +21,9 @@
             </select>
             <button id="add_btn">Add Expense!</button>
         </div>
-        <div id="expense_display"></div>
+        <div id="expense_display">
+            <button id="edit_btn">Edit!</button>
+        </div>
         <div id="total_and_avg"></div>
         <div id="uncategorized"></div>
     </div>
