--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="app">
+        <h1>Expense Tracker</h1>
         <div id="input_container">
             <label for="amount">Amount</label>
             <input type="number" id="amount" placeholder="Enter the Amount">
@@ -22,10 +23,15 @@
             <button id="add_btn">Add Expense!</button>
         </div>
         <div id="expense_display">
+            <h4>Expense List</h1>
             <button id="edit_btn">Edit!</button>
         </div>
-        <div id="total_and_avg"></div>
-        <div id="uncategorized"></div>
+        <div id="total_and_avg">
+            <h4>Total Value</h4>
+        </div>
+        <div id="uncategorized">
+            <h4>Uncategorized List</h4>
+        </div>
     </div>
 </body>
 </html>
