--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
             <button id="add_btn">Add Expense!</button>
         </div>
         <div id="expense_display">
-            <h4>Expense List</h1>
+            <h4>Expense List</h4>
             <button id="edit_btn">Edit!</button>
         </div>
         <div id="total_and_avg">
-            <h4>Total Value</h4>
+            <h4>Total Amount</h4>
+            <h4>Average Amount</h4>
         </div>
         <div id="uncategorized">
             <h4>Uncategorized List</h4>
