--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="app">
         <h1>Expense Tracker</h1>
         <div id="input_container">
-            <label for="amount">Amount</label>
+            <label for="amount">Amount:</label>
             <input type="number" id="amount" placeholder="Enter the Amount">
             <label for="category_chart">Category:</label>
             <select id="category_chart">
