Refactor expense list layout and enhance UI interactions

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <button id="add_btn">Add Expense!</button>
         </div>
         <div id="expense_display">
-            <h4>Expense List</h4>
+            <h4 id="expenselist">Expense List</h4>
             <button id="edit_btn">Edit!</button>
         </div>
         <div id="total_and_avg">
