basic styling and UI is completed

--- a/index.html
+++ b/index.html
@@ -22,16 +22,20 @@
             </select>
             <button id="add_btn">Add Expense!</button>
         </div>
-        <div id="expense_display">
-            <h4 id="expenselist">Expense List</h4>
-            <button id="edit_btn">Edit!</button>
-        </div>
-        <div id="total_and_avg">
-            <h4>Total Amount</h4>
-            <h4>Average Amount</h4>
-        </div>
-        <div id="uncategorized">
-            <h4>Uncategorized List</h4>
+        <div id="bottom_section">
+            <div id="expense_display">
+                <h4 id="expenselist">Expense List</h4>
+                <button id="edit_btn">Edit!</button>
+            </div>
+            <div id="right_panel">
+                <div id="total_and_avg">
+                    <h4>Total Amount</h4>
+                    <h4>Average Amount</h4>
+                </div>
+                <div id="uncategorized">
+                <h4>Uncategorized List</h4>
+                </div>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
