--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
             </div>
             <div id="right_panel">
                 <div id="total_and_avg">
-                    <h4>Total Amount</h4>
-                    <h4>Average Amount</h4>
+                    <h4>Total Amount: <span id="total">0</span></h4>
+                    <h4>Average Amount: <span id="average">0</span></h4>
+                    
                 </div>
                 <div id="uncategorized">
                 <h4>Uncategorized List</h4>
