--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div id="expense_display">
                 <h4 id="expenselist">Expense List</h4>
                 <button id="edit_btn">Edit!</button>
+                <div id="displayscreen"></div>
             </div>
             <div id="right_panel">
                 <div id="total_and_avg">
