--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
         </div>
         <div id="bottom_section">
             <div id="expense_display">
-                <h4 id="expenselist">Expense List</h4>
-                <button id="edit_btn">Edit!</button>
+                <div id="xpense_header">
+                    <h4 id="expenselist">Expense List</h4>
+                    <button id="edit_btn">Edit!</button>
+                </div>
                 <div id="displayscreen"></div>
             </div>
             <div id="right_panel">
