--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div id="bottom_section">
             <div id="expense_display">
-                <div id="xpense_header">
+                <div id="expense_header">
                     <h4 id="expenselist">Expense List</h4>
                     <button id="edit_btn">Edit!</button>
                 </div>
