working on rest button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="app">
         <h1>Expense Tracker</h1>
+        <button id="rst_btn">Reset!</button>
         <div id="input_container">
             <label for="amount">Amount:</label>
             <input type="number" id="amount" placeholder="Enter the Amount">
